--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
 
         </activity>
         <activity android:name=".Activity.RegisterActivity"></activity>
+        <service android:name=".Location.LatLongFinder"/>
     </application>
 
 </manifest>
